--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "scripts": {
         "test": "vendor/bin/phpunit"
     },
-    "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.4",
+        "justijndepover/php-check": "^0.5.0"
     }
 }
